#76180 - Fix align of notification in mini-cart

--- a/Snowdog_Components/components/Organisms/minicart-product/_minicart-product.scss
+++ b/Snowdog_Components/components/Organisms/minicart-product/_minicart-product.scss
@@ -4,6 +4,7 @@
     display: flex;
     width: 100%;
     flex-flow: row nowrap;
+    flex-wrap: wrap;
     padding: $minicart-product__padding;
     border-bottom: $minicart-product__border;
 
@@ -26,10 +27,6 @@
         flex-flow: column wrap;
         flex-grow: 1;
         padding: $minicart-product__data-padding;
-
-        @include mq($screen-m) {
-            flex-direction: row;
-        }
     }
 
     &__info {
